--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,22 @@
-<button type="button" class="btn btn-outline-secondary mr-2" placement="top"
-        ngbPopover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." popoverTitle="Popover on top">
-  Popover on top
-</button>
+<nav class="navbar navbar-dark bg-dark mb-5">
+  <a class="navbar-brand" href="/">Pokemon Tournaments</a>
+  <div class="navbar-expand mr-auto">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">Home</a>
+      <a class="nav-item nav-link" href="#">About</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
+    </div>
+  </div>
+  <div class="navbar-expand ml-auto navbar-nav">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
+        <i class="fa fa-github"></i>
+      </a>
+      <a class="nav-item nav-link" href="https://twitter.com/KayTVN" target="_blank">
+        <i class="fa fa-twitter"></i>
+      </a>
+    </div>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
