--- a/src/styles.less
+++ b/src/styles.less
@@ -1,2 +1,17 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
+
+body {
+  background-image: url("./assets/background.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  text-align: center;
+  // padding-top: 50px;
+  // padding-bottom: 50px;
+}
+
+header, h2 {
+  font-family: 'Press Start 2P', cursive;
+}
