made tournament page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <a class="navbar-brand" href="/">Pokemon Tournaments</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">About</a>
+      <a class="nav-item nav-link active" href="/">Tournaments</a>
+      <a class="nav-item nav-link" href="#">Rankings</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
   </div>
