--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/">Tournaments</a>
-      <a class="nav-item nav-link" href="#">Rankings</a>
+      <a class="nav-item nav-link" href="/ranks">Rankings</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
   </div>
