--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/">Tournaments</a>
       <a class="nav-item nav-link" href="/ranks">Rankings</a>
+      <a class="nav-item nav-link" href="/matchup">Type Matchups</a>
       <a class="nav-item nav-link" href="#">Sign Up</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
