--- a/src/app/tournaments/tournaments.html
+++ b/src/app/tournaments/tournaments.html
@@ -2,4 +2,10 @@
   Tournaments Page
 </div>
 
+{{pokemon?.name}}
+
+<div class="col-xs-12 col-md-6">
+  <img src="{{pokemon?.sprites?.front_default}}" >
+</div>
+
 <!-- list of active tournaments -->
