fix pokemon service

--- a/src/app/tournaments/tournaments.html
+++ b/src/app/tournaments/tournaments.html
@@ -3,9 +3,7 @@
 </div>
 
 {{pokemon?.name}}
-
-<div class="col-xs-12 col-md-6">
-  <img src="{{pokemon?.sprites?.front_default}}" >
-</div>
+<img src="{{pokemon?.sprites?.front_default}}">
+<img src="{{pokemon?.sprites?.front_shiny}}">
 
 <!-- list of active tournaments -->
