--- a/src/styles.less
+++ b/src/styles.less
@@ -7,7 +7,7 @@ body {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
-  text-align: center;
+  // text-align: center;
   // padding-top: 50px;
   // padding-bottom: 50px;
 }
