change component to pokedex

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="/">Pokemon Tournaments</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">Tournaments</a>
+      <a class="nav-item nav-link active" href="/">Pokedex</a>
       <a class="nav-item nav-link" href="/ranks">Rankings</a>
       <a class="nav-item nav-link" href="/matchup">Type Matchups</a>
       <a class="nav-item nav-link" href="#">Sign Up</a>
