fix for bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
 <nav class="navbar navbar-dark bg-dark mb-5">
-  <a class="navbar-brand" href="/">Pokemon Tournaments</a>
+  <a class="navbar-brand" href="/">VF/N. Chest Pogo</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/">Pokedex</a>
-      <a class="nav-item nav-link" href="/ranks">Rankings</a>
-      <a class="nav-item nav-link" href="/matchup">Type Matchups</a>
-      <a class="nav-item nav-link" href="#">Sign Up</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
+      <a class="nav-item nav-link" href="#">Tournaments</a>
+      <a class="nav-item nav-link" href="/ranks">Ranks</a>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
