--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -6,6 +6,8 @@
 <img src="{{pokemon?.sprites?.front_default}}">
 <img src="{{pokemon?.sprites?.front_shiny}}">
 
+<!-- pokedex tabs based on generation -->
+<!-- modal window for more detailed pokemon list -->
 <div class="row">
   <div class="col-md-2 col-xs-12" *ngFor="let pokemon of genOnePokemon">
     <div class="pokedex-box">
@@ -14,5 +16,3 @@
     </div>
   </div>
 </div>
-
-<!-- list of active tournaments -->
