--- a/src/app/pokedex/pokedex-tabs.component.html
+++ b/src/app/pokedex/pokedex-tabs.component.html
@@ -1,15 +1,1 @@
-<ngb-tabset>
-  <ngb-tab *ngFor="let region of regions" title="{{region.name}}">
-    <ng-template ngbTabContent>
-      {{region.name}}
-      <!-- <div class="row">
-        <div class="col-md-2 col-xs-12" *ngFor="let pokemon of genOnePokemon">
-          <div class="pokedex-box">
-          <div>#{{pokemon.id}} - {{pokemon.name}}</div>
-          <div><img src="{{pokemon.sprite}}"></div>
-          </div>
-        </div>
-      </div> -->
-    </ng-template>
-  </ngb-tab>
-</ngb-tabset>
+New Tab
