--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -7,7 +7,7 @@
 <img src="{{pokemon?.sprites?.front_shiny}}">
 
 <!-- pokedex tabs based on generation -->
-<ngb-tabset>
+<!-- <ngb-tabset>
   <ngb-tab title="Kanto">
     <ng-template ngbTabContent>
       <div class="row">
@@ -35,6 +35,6 @@
       <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio. Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna, egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
     </ng-template>
   </ngb-tab>
-</ngb-tabset>
+</ngb-tabset> -->
 
 <!-- modal window for more detailed pokemon list -->
