--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -1,40 +1,29 @@
-<div class="padding-top: 20px">
-  Pokedex Page
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      Pokedex Page
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      Test
+    </div>
+    <div class="col-md-3">
+      test 2
+    </div>
+    <div class="col-md-3">
+      test 3
+    </div>
+  </div>
 </div>
+
 
 {{pokemon?.name}}
 <img src="{{pokemon?.sprites?.front_default}}">
 <img src="{{pokemon?.sprites?.front_shiny}}">
 
 <!-- pokedex tabs based on generation -->
-<!-- <ngb-tabset>
-  <ngb-tab title="Kanto">
-    <ng-template ngbTabContent>
-      <div class="row">
-        <div class="col-md-2 col-xs-12" *ngFor="let pokemon of genOnePokemon">
-          <div class="pokedex-box">
-          <div>#{{pokemon.id}} - {{pokemon.name}}</div>
-          <div><img src="{{pokemon.sprite}}"></div>
-          </div>
-        </div>
-      </div>
-    </ng-template>
-  </ngb-tab>
-  <ngb-tab title="Jhoto">
-    <ng-template ngbTabContent>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid.
-      <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table
-      craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl
-      cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia
-      yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean
-      shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero
-      sint qui sapiente accusamus tattooed echo park.</p>
-    </ng-template>
-  </ngb-tab>
-  <ngb-tab title="Disabled" [disabled]="true">
-    <ng-template ngbTabContent>
-      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi. Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio. Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna, egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
-    </ng-template>
-  </ngb-tab>
-</ngb-tabset> -->
+<!-- todo -->
 
 <!-- modal window for more detailed pokemon list -->
+<!-- todo -->
