--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -5,14 +5,14 @@
     </div>
   </div>
   <br>
-  <div class="row">
+  <div class="row search-bar">
     <div class="col-md-2">
       <label for="pokedex">Search Pokemon: </label>
     </div>
     <div class="col-md-5">
       <input type="text" class="form-control" id="pokedex" name="pokemon" [(ngModel)]="searchPokemon">
     </div>
-    <button (click)="getPokemon()" type="submit" class="btn btn-primary">Submit</button>
+    <button (click)="getPokemon()" type="submit" class="btn btn-light">Who's That Pokemon?</button>
   </div>
   <div class="row">
     <div class="col-md-12">
