--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -16,6 +16,11 @@
   </div>
   <div class="row">
     <div class="col-md-12">
+      (You can search Pokemon name or Pokedex ID)
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       {{pokemon?.name}}
       <img src="{{pokemon?.sprites?.front_default}}">
       <img src="{{pokemon?.sprites?.front_shiny}}">
