--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -26,6 +26,11 @@
       <img src="{{pokemon?.sprites?.front_shiny}}">
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <button type="submit" class="btn btn-light">Kanto</button>
+    </div>
+  </div>
 </div>
 
 
