--- a/src/app/pokedex/pokedex-regions/pokedex-regions.component.html
+++ b/src/app/pokedex/pokedex-regions/pokedex-regions.component.html
@@ -1,1 +1,5 @@
-New Tab
+<div class="row">
+    <div class="col-md-12">
+        <button type="submit" class="btn btn-light">Kanto</button>
+    </div>
+</div>
