--- a/src/app/pokedex/pokedex-regions/pokedex-regions.component.html
+++ b/src/app/pokedex/pokedex-regions/pokedex-regions.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
-        <button type="submit" class="btn btn-light">Kanto</button>
+    <div *ngFor="let region of regions" class="col-md-1">
+        <button type="submit" class="btn btn-light">{{region.name}}</button>
     </div>
 </div>
