--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -5,6 +5,7 @@
     </div>
   </div>
   <br>
+  <pokedex-modal></pokedex-modal>
   <div class="row search-bar">
     <div class="col-md-2">
       <label for="pokedex">Search Pokemon: </label>
