display pokemon for modal window

--- a/src/app/pokedex/pokedex-modal/pokedex-modal.html
+++ b/src/app/pokedex/pokedex-modal/pokedex-modal.html
@@ -1,7 +1,6 @@
-<!-- <button class="btn btn-lg btn-outline-primary" (click)="open(mymodal)">Open My Modal</button> -->
 
 <div class="modal-header">
-    <h4 class="modal-title">Hi there!</h4>
+    <h4 class="modal-title" *ngIf="pokemon">{{pokemon.name}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
