--- a/src/app/pokedex/pokedex-modal/pokedex-modal.html
+++ b/src/app/pokedex/pokedex-modal/pokedex-modal.html
@@ -1,12 +1,13 @@
 
 <div class="modal-header">
-    <h4 class="modal-title" *ngIf="pokemon">{{pokemon.name}}</h4>
+    <h4 class="modal-title">{{pokemon?.name}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <p>Hello!</p>
+    <img src="{{pokemon?.sprites?.front_default}}">
+    <img src="{{pokemon?.sprites?.front_shiny}}">
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
