--- a/src/app/pokedex/pokedex-modal/pokedex-modal.html
+++ b/src/app/pokedex/pokedex-modal/pokedex-modal.html
@@ -12,3 +12,5 @@
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
 </div>
+
+<!-- to: design modal -->
