--- a/src/app/pokedex/pokedex.less
+++ b/src/app/pokedex/pokedex.less
@@ -4,6 +4,8 @@
   margin: 3px;
   border-radius: 3px;
   cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 2px 3px;
 }
 
 .search-bar {
