--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="/">Pokedex</a>
-      <a class="nav-item nav-link" routerLink="/">Tournaments</a>
-      <a class="nav-item nav-link" routerLink="/ranks">Ranks</a>
+      <a class="nav-item nav-link" routerLink="/">Pokedex</a>
+      <a class="nav-item nav-link" routerLink="/">PoGo</a>
+      <a class="nav-item nav-link" routerLink="/ranks">References</a>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
@@ -22,3 +22,5 @@
 <div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
+
+<!-- todo: active tab for nav -->
