--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/">Pokedex</a>
       <a class="nav-item nav-link" routerLink="/">PoGo</a>
-      <a class="nav-item nav-link" routerLink="/ranks">References</a>
+      <a class="nav-item nav-link" routerLink="/references">References</a>
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
