--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark mb-5">
+<nav class="navbar navbar-light bg-faded mb-5" style="background-color: white;">
   <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
