--- a/src/styles.less
+++ b/src/styles.less
@@ -1,15 +1,11 @@
-// @import "~bootstrap/dist/css/bootstrap.css";
-// @import "~font-awesome/css/font-awesome.css";
-
 body {
-  background-image: url("./assets/background.jpg");
+  background-image: url("./assets/pokemon-wallpaper2.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
   text-align: center;
-  // padding-top: 50px;
-  // padding-bottom: 50px;
+  // background-blend-mode: luminosity;
 }
 
 header, h2 {
