shell of component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/">Pokedex</a>
-      <a class="nav-item nav-link" routerLink="/">PoGo</a>
+      <a class="nav-item nav-link" routerLink="/pokemongo">PoGo</a>
       <a class="nav-item nav-link" routerLink="/references">References</a>
     </div>
   </div>
