--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-faded mb-5" style="background-color: white;">
-  <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-faded mb-5" style="background-color: white;">
+  <!-- <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
   <div class="navbar-expand mr-auto">
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/">Pokedex</a>
@@ -8,6 +8,50 @@
     </div>
   </div>
   <div class="navbar-expand ml-auto navbar-nav">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
+        <fa-icon [icon]="faGithub"></fa-icon>
+      </a>
+      <a class="nav-item nav-link" href="https://twitter.com/KayTVN" target="_blank">
+        <fa-icon [icon]="faTwitter"></fa-icon>
+      </a>
+    </div>
+  </div>
+  <button class="navbar-toggler collapsed" type="button" (click)="toggleNavbar()">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="/">Pokedex</a>
+      <a class="nav-item nav-link" routerLink="/pokemongo">PoGo</a>
+      <a class="nav-item nav-link" routerLink="/references">References</a>
+    </div>
+  </div> -->
+  <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/">Pokedex<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/pokemongo">Pokemon Go</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          References
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/references">Action</a>
+          <a class="dropdown-item" routerLink="/references">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" routerLink="/references">Something else here</a>
+        </div>
+      </li>
+    </ul>
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
         <fa-icon [icon]="faGithub"></fa-icon>
