--- a/src/app/pokedex/pokedex.less
+++ b/src/app/pokedex/pokedex.less
@@ -15,3 +15,12 @@
 .region-buttons {
   margin-bottom: 3px;
 }
+
+.modal-body-header {
+  font-family: 'Press Start 2P', cursive;
+  text-align: center;
+}
+
+.modal-about-section {
+  text-align: left;
+}
