start of new info page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,8 @@
           References
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/references">Action</a>
-          <a class="dropdown-item" routerLink="/references">Another action</a>
+          <a class="dropdown-item" routerLink="/references">Silph Road</a>
+          <a class="dropdown-item" routerLink="/references">Leek Duck</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" routerLink="/references">Something else here</a>
         </div>
