--- a/src/app/pokemon-go/pokemon-go.html
+++ b/src/app/pokemon-go/pokemon-go.html
@@ -1,12 +1,3 @@
-<!-- <div class="padding-top: 20px">
-    {{title}} Page
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-</div> -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
@@ -21,33 +12,8 @@
             <div class="card">
                 <img src="../../assets/pokemon-go/mew.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-text">Kanto Event Feb 20, 2021</h5>
-                  <ul class="list-group list-group-flush">
-                      <!-- will need an external page -->
-                    <li class="list-group-item">Spearow x2</li>
-                    <li class="list-group-item">Pidgey x2</li>
-                    <li class="list-group-item">Clefairy x2</li>
-                    <li class="list-group-item">Vulpix x2</li>
-                    <li class="list-group-item">Zubat x2</li>
-                    <li class="list-group-item">Paras x2</li>
-                    <li class="list-group-item">Diglett x1</li>
-                    <li class="list-group-item">Meowth x2</li>
-                    <li class="list-group-item">Bellsprout x2</li>
-                    <li class="list-group-item">Slowpoke x2</li>
-                    <li class="list-group-item">Magnemite x2</li>
-                    <li class="list-group-item">Farfetch'd x1</li>
-                    <li class="list-group-item">Dodou x2</li>
-                    <li class="list-group-item">Grimer x1</li>
-                    <li class="list-group-item">Eggy x1</li>
-                    <li class="list-group-item">Hitmonlee, Hitmonchan x1</li>
-                    <li class="list-group-item">Kanga x1</li>
-                    <li class="list-group-item">Goldeen x2</li>
-                    <li class="list-group-item">Jynx x1</li>
-                    <li class="list-group-item">Ditto x1</li>
-                    <li class="list-group-item">Kabuto x1</li>
-                    <li class="list-group-item">Snorlax x1</li>
-                    <li class="list-group-item">Mew x1</li>
-                  </ul>
+                  <h5 class="card-title">Kanto Event Feb 20, 2021</h5>
+                  <a routerLink="/pokemongo/kanto-event" class="card-link">Card link</a>
                 </div>
             </div>
         </div>
