--- a/src/app/pokemon-go/pokemon-go.html
+++ b/src/app/pokemon-go/pokemon-go.html
@@ -6,38 +6,27 @@
     </div>
     <div class="row">
         <div class="col-md-3">
-            <div class="card-header">
-                KayTV's Kanto Event Shiny Needs
-              </div>
+            <div class="card">
+                <img src="../../assets/pokemon-go/march.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">March Madness, 2021</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <img src="../../assets/pokemon-go/shiny-mew.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">The Hunt For Mew</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
             <div class="card">
                 <img src="../../assets/pokemon-go/mew.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Kanto Event Feb 20, 2021</h5>
-                  <a routerLink="/pokemongo/kanto-event" class="card-link">Card link</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a routerLink="/pokemongo/kanto-event" class="card-link">Shiny Needs</a>
                 </div>
             </div>
         </div>
