--- a/src/app/pokemon-go/pokemon-go.html
+++ b/src/app/pokemon-go/pokemon-go.html
@@ -17,7 +17,7 @@
             <div class="card">
                 <img src="../../assets/pokemon-go/shiny-mew.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">The Hunt For Mew</p>
+                  <p class="card-title">The Hunt For Shiny Mew</p>
                 </div>
             </div>
         </div>
