--- a/src/app/pokemon-go/pokemon-go.html
+++ b/src/app/pokemon-go/pokemon-go.html
@@ -10,6 +10,7 @@
                 <img src="../../assets/pokemon-go/march.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">March Madness, 2021</h5>
+                    <a routerLink="/pokemongo/march-madness" class="card-link">The Many Details</a>
                 </div>
             </div>
         </div>
@@ -18,6 +19,7 @@
                 <img src="../../assets/pokemon-go/shiny-mew.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-title">The Hunt For Shiny Mew</p>
+                  <a routerLink="/pokemongo/shiny-mew" class="card-link">The Hunt</a>
                 </div>
             </div>
         </div>
