--- a/src/app/pokemon-go/events/shiny-mew/shiny-mew.html
+++ b/src/app/pokemon-go/events/shiny-mew/shiny-mew.html
@@ -1,6 +1,20 @@
 <back-button></back-button>
 <div class="row">
     <div class="col-md-12">
-        Hunt for Shiny Mew
+        <h2>Hunt for Shiny Mew</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-3">
+        <h4>Task 1</h4>
+    </div>
+    <div class="col-md-3">
+        <h4>Task 2</h4>
+    </div>
+    <div class="col-md-3">
+        <h4>Task 3</h4>
+    </div>
+    <div class="col-md-3">
+        <h4>Task 4</h4>
     </div>
 </div>
