--- a/src/app/pokemon-go/events/shiny-mew/shiny-mew.html
+++ b/src/app/pokemon-go/events/shiny-mew/shiny-mew.html
@@ -13,8 +13,12 @@
     </div>
     <div class="col-md-3">
         <h4>Task 3</h4>
+        <ul>
+            <li>Catch 1051 Pokemon</li>
+        </ul>
     </div>
     <div class="col-md-3">
         <h4>Task 4</h4>
+        <p>Collect all the rewards</p>
     </div>
 </div>
