font awesome fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,7 @@
     </ul>
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
-        <fa-icon [icon]="faGithub"></fa-icon>
-      </a>
-      <a class="nav-item nav-link" href="https://twitter.com/KayTVN" target="_blank">
-        <fa-icon [icon]="faTwitter"></fa-icon>
+        <i class="fa-brands fa-github"></i>
       </a>
     </div>
   </div>
