--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,5 @@
+@import "~@fortawesome/fontawesome-free/css/all.css";
+
 body {
   background-image: url("./assets/pokemon-wallpaper2.jpg");
   background-repeat: no-repeat;
