--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -1,6 +1,7 @@
 <div>
   <div class="row">
     <div class="col-md-12">
+      <typeahead-input></typeahead-input>
       <div *ngIf="error" class="alert alert-warning alert-dismissible fade show" role="alert">
         Pokemon <strong>{{searchPokemon}}</strong> doesn't exsist, check again!
         <button (click)="closeBanner()" type="button" class="close" data-dismiss="alert" aria-label="Close">
