--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -1,7 +1,6 @@
 <div>
   <div class="row">
     <div class="col-md-12">
-      <typeahead-input></typeahead-input>
       <div *ngIf="error" class="alert alert-warning alert-dismissible fade show" role="alert">
         Pokemon <strong>{{searchPokemon}}</strong> doesn't exsist, check again!
         <button (click)="closeBanner()" type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -17,7 +16,8 @@
       <label for="pokedex">Search Pokemon: </label>
     </div>
     <div class="col-md-5">
-      <input type="text" class="form-control" id="pokedex" name="pokemon" [(ngModel)]="searchPokemon" (ngModelChange)="pokemonChange()">
+      <!-- <input type="text" class="form-control" id="pokedex" name="pokemon" [(ngModel)]="searchPokemon" (ngModelChange)="pokemonChange()"> -->
+      <typeahead-input (newSearchPokemon)="pokemonChange($event)"></typeahead-input>
       <span>(You can search Pokemon name or Pokedex ID)</span>
     </div>
     <div class="col-md-2">
