Start of update for nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-faded mb-5" style="background-color: white;">
+<nav class="nav navbar navbar-expand-lg navbar-light bg-faded mb-5" style="background-color: white;">
   <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
         </div>
       </li>
     </ul>
-    <div class="navbar-nav">
+    <div class="nav justify-content-end">
       <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
         <i class="fa-brands fa-github"></i>
       </a>
