--- a/src/app/common/typeahead-input/typeahead-input.html
+++ b/src/app/common/typeahead-input/typeahead-input.html
@@ -1,4 +1,4 @@
 <input id="typeahead-basic" type="text" class="form-control" [(ngModel)]="searchPokemon" [ngbTypeahead]="search" (ngModelChange)="pokemonChange()"/>
-
+<span>(You can search Pokemon name or Pokedex ID)</span>
 <hr />
 <pre>Pokemon: {{ searchPokemon | json }}</pre>
