--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,32 @@
-<nav class="nav navbar navbar-expand-lg navbar-light bg-faded mb-5" style="background-color: white;">
-  <a class="navbar-brand" routerLink="/">KayTV's Pokemon Site</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Pokedex<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/pokemongo">Pokemon Go</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          References
+<nav class="navbar navbar-expand-sm bg-light">
+  <div class="container-fluid">
+     <a class="navbar-brand" routerLink="/">KayTV</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/">Pokedex</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/pokemongo">Pokemon Go</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">References</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" routerLink="#">Link</a></li>
+              <li><a class="dropdown-item" routerLink="#">Another link</a></li>
+              <li><a class="dropdown-item" routerLink="#">A third link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="nav justify-content-end">
+        <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
+          <i class="fa-brands fa-github"></i>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/references">Silph Road</a>
-          <a class="dropdown-item" routerLink="/references">Leek Duck</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" routerLink="/references">Something else here</a>
-        </div>
-      </li>
-    </ul>
-    <div class="nav justify-content-end">
-      <a class="nav-item nav-link" href="https://github.com/KayTV" target="_blank">
-        <i class="fa-brands fa-github"></i>
-      </a>
-    </div>
+      </div>
   </div>
 </nav>
 
