--- a/src/app/pokedex/pokedex.html
+++ b/src/app/pokedex/pokedex.html
@@ -16,9 +16,7 @@
       <label for="pokedex">Search Pokemon: </label>
     </div>
     <div class="col-md-5">
-      <!-- <input type="text" class="form-control" id="pokedex" name="pokemon" [(ngModel)]="searchPokemon" (ngModelChange)="pokemonChange()"> -->
-      <typeahead-input (newSearchPokemon)="pokemonChange($event)"></typeahead-input>
-      <span>(You can search Pokemon name or Pokedex ID)</span>
+      <typeahead-input (newSearchPokemon)="pokemonChange($event)" [reset]="reset"></typeahead-input>
     </div>
     <div class="col-md-2">
       <button (click)="getPokemon()" type="submit" class="btn btn-outline-dark btn-block">Who's That Pokemon?</button>
